add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="style.css" />
     <title>My Personal Website</title>
+    <style>
+        body {
+            margin: 20px;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Hellow World!</h1>
-    
+
+    <h5>Welcome to my first FULL STACK website!</h5>
+    <p> I pray that this works and that I become one of the top Software Engineers ever to exist!
+
+        Below is a link to one of my greatest inspirational persons:
+    </p>
+    <a href="https://kanyewest.com/" class="btn btn-primary">KanyeWest.com</a>
+
+
 </body>
+
 </html>
