add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </p>
     <a href="https://kanyewest.com/" class="btn btn-primary">KanyeWest.com</a>
 
+    <script src="script.js"></script>
 
 </body>
 
